--- a/solid/package.json
+++ b/solid/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "solid",
+  "name": "learning",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "gmvbr <https://github.com/gmvbr>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^16.10.1",
+    "typescript": "^4.4.3"
+  }
 }
